Moved Browser to another process Added crafting recipe Changed permissions Replaced diamond hoe with a wand